pyslate2/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    ESCAPED

Grammar

Rule 0     S' -> expression
Rule 1     expression -> plaintext expression
Rule 2     expression -> inner_tag expression
Rule 3     expression -> pholder_tag expression
Rule 4     expression -> empty
Rule 5     pholder_tag -> PERC_LBRACE plaintext RBRACE
Rule 6     inner_tag -> DOL_LBRACE inner_tag_name RBRACE
Rule 7     inner_tag -> DOL_LBRACE plaintext COLON inner_tag_name RBRACE
Rule 8     inner_tag_name -> plaintext inner_tag_cont
Rule 9     inner_tag_name -> pholder_tag inner_tag_cont
Rule 10    inner_tag_cont -> plaintext inner_tag_cont
Rule 11    inner_tag_cont -> pholder_tag inner_tag_cont
Rule 12    inner_tag_cont -> empty
Rule 13    plaintext -> PLAINTEXT plaintext
Rule 14    plaintext -> PLAINTEXT
Rule 15    empty -> <empty>

Terminals, with rules where they appear

COLON                : 7
DOL_LBRACE           : 6 7
ESCAPED              : 
PERC_LBRACE          : 5
PLAINTEXT            : 13 14
RBRACE               : 5 6 7
error                : 

Nonterminals, with rules where they appear

empty                : 4 12
expression           : 1 2 3 0
inner_tag            : 2
inner_tag_cont       : 8 9 10 11
inner_tag_name       : 6 7
pholder_tag          : 3 9 11
plaintext            : 1 5 7 8 10 13

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . plaintext expression
    (2) expression -> . inner_tag expression
    (3) expression -> . pholder_tag expression
    (4) expression -> . empty
    (13) plaintext -> . PLAINTEXT plaintext
    (14) plaintext -> . PLAINTEXT
    (6) inner_tag -> . DOL_LBRACE inner_tag_name RBRACE
    (7) inner_tag -> . DOL_LBRACE plaintext COLON inner_tag_name RBRACE
    (5) pholder_tag -> . PERC_LBRACE plaintext RBRACE
    (15) empty -> .

    PLAINTEXT       shift and go to state 3
    DOL_LBRACE      shift and go to state 5
    PERC_LBRACE     shift and go to state 8
    $end            reduce using rule 15 (empty -> .)

    expression                     shift and go to state 1
    inner_tag                      shift and go to state 2
    empty                          shift and go to state 4
    plaintext                      shift and go to state 6
    pholder_tag                    shift and go to state 7

state 1

    (0) S' -> expression .



state 2

    (2) expression -> inner_tag . expression
    (1) expression -> . plaintext expression
    (2) expression -> . inner_tag expression
    (3) expression -> . pholder_tag expression
    (4) expression -> . empty
    (13) plaintext -> . PLAINTEXT plaintext
    (14) plaintext -> . PLAINTEXT
    (6) inner_tag -> . DOL_LBRACE inner_tag_name RBRACE
    (7) inner_tag -> . DOL_LBRACE plaintext COLON inner_tag_name RBRACE
    (5) pholder_tag -> . PERC_LBRACE plaintext RBRACE
    (15) empty -> .

    PLAINTEXT       shift and go to state 3
    DOL_LBRACE      shift and go to state 5
    PERC_LBRACE     shift and go to state 8
    $end            reduce using rule 15 (empty -> .)

    expression                     shift and go to state 9
    inner_tag                      shift and go to state 2
    empty                          shift and go to state 4
    plaintext                      shift and go to state 6
    pholder_tag                    shift and go to state 7

state 3

    (13) plaintext -> PLAINTEXT . plaintext
    (14) plaintext -> PLAINTEXT .
    (13) plaintext -> . PLAINTEXT plaintext
    (14) plaintext -> . PLAINTEXT

  ! shift/reduce conflict for PLAINTEXT resolved as shift
    PERC_LBRACE     reduce using rule 14 (plaintext -> PLAINTEXT .)
    RBRACE          reduce using rule 14 (plaintext -> PLAINTEXT .)
    DOL_LBRACE      reduce using rule 14 (plaintext -> PLAINTEXT .)
    $end            reduce using rule 14 (plaintext -> PLAINTEXT .)
    COLON           reduce using rule 14 (plaintext -> PLAINTEXT .)
    PLAINTEXT       shift and go to state 3

  ! PLAINTEXT       [ reduce using rule 14 (plaintext -> PLAINTEXT .) ]

    plaintext                      shift and go to state 10

state 4

    (4) expression -> empty .

    $end            reduce using rule 4 (expression -> empty .)


state 5

    (6) inner_tag -> DOL_LBRACE . inner_tag_name RBRACE
    (7) inner_tag -> DOL_LBRACE . plaintext COLON inner_tag_name RBRACE
    (8) inner_tag_name -> . plaintext inner_tag_cont
    (9) inner_tag_name -> . pholder_tag inner_tag_cont
    (13) plaintext -> . PLAINTEXT plaintext
    (14) plaintext -> . PLAINTEXT
    (5) pholder_tag -> . PERC_LBRACE plaintext RBRACE

    PLAINTEXT       shift and go to state 3
    PERC_LBRACE     shift and go to state 8

    inner_tag_name                 shift and go to state 11
    plaintext                      shift and go to state 12
    pholder_tag                    shift and go to state 13

state 6

    (1) expression -> plaintext . expression
    (1) expression -> . plaintext expression
    (2) expression -> . inner_tag expression
    (3) expression -> . pholder_tag expression
    (4) expression -> . empty
    (13) plaintext -> . PLAINTEXT plaintext
    (14) plaintext -> . PLAINTEXT
    (6) inner_tag -> . DOL_LBRACE inner_tag_name RBRACE
    (7) inner_tag -> . DOL_LBRACE plaintext COLON inner_tag_name RBRACE
    (5) pholder_tag -> . PERC_LBRACE plaintext RBRACE
    (15) empty -> .

    PLAINTEXT       shift and go to state 3
    DOL_LBRACE      shift and go to state 5
    PERC_LBRACE     shift and go to state 8
    $end            reduce using rule 15 (empty -> .)

    expression                     shift and go to state 14
    inner_tag                      shift and go to state 2
    empty                          shift and go to state 4
    plaintext                      shift and go to state 6
    pholder_tag                    shift and go to state 7

state 7

    (3) expression -> pholder_tag . expression
    (1) expression -> . plaintext expression
    (2) expression -> . inner_tag expression
    (3) expression -> . pholder_tag expression
    (4) expression -> . empty
    (13) plaintext -> . PLAINTEXT plaintext
    (14) plaintext -> . PLAINTEXT
    (6) inner_tag -> . DOL_LBRACE inner_tag_name RBRACE
    (7) inner_tag -> . DOL_LBRACE plaintext COLON inner_tag_name RBRACE
    (5) pholder_tag -> . PERC_LBRACE plaintext RBRACE
    (15) empty -> .

    PLAINTEXT       shift and go to state 3
    DOL_LBRACE      shift and go to state 5
    PERC_LBRACE     shift and go to state 8
    $end            reduce using rule 15 (empty -> .)

    expression                     shift and go to state 15
    inner_tag                      shift and go to state 2
    empty                          shift and go to state 4
    plaintext                      shift and go to state 6
    pholder_tag                    shift and go to state 7

state 8

    (5) pholder_tag -> PERC_LBRACE . plaintext RBRACE
    (13) plaintext -> . PLAINTEXT plaintext
    (14) plaintext -> . PLAINTEXT

    PLAINTEXT       shift and go to state 3

    plaintext                      shift and go to state 16

state 9

    (2) expression -> inner_tag expression .

    $end            reduce using rule 2 (expression -> inner_tag expression .)


state 10

    (13) plaintext -> PLAINTEXT plaintext .

    PLAINTEXT       reduce using rule 13 (plaintext -> PLAINTEXT plaintext .)
    PERC_LBRACE     reduce using rule 13 (plaintext -> PLAINTEXT plaintext .)
    RBRACE          reduce using rule 13 (plaintext -> PLAINTEXT plaintext .)
    DOL_LBRACE      reduce using rule 13 (plaintext -> PLAINTEXT plaintext .)
    $end            reduce using rule 13 (plaintext -> PLAINTEXT plaintext .)
    COLON           reduce using rule 13 (plaintext -> PLAINTEXT plaintext .)


state 11

    (6) inner_tag -> DOL_LBRACE inner_tag_name . RBRACE

    RBRACE          shift and go to state 17


state 12

    (7) inner_tag -> DOL_LBRACE plaintext . COLON inner_tag_name RBRACE
    (8) inner_tag_name -> plaintext . inner_tag_cont
    (10) inner_tag_cont -> . plaintext inner_tag_cont
    (11) inner_tag_cont -> . pholder_tag inner_tag_cont
    (12) inner_tag_cont -> . empty
    (13) plaintext -> . PLAINTEXT plaintext
    (14) plaintext -> . PLAINTEXT
    (5) pholder_tag -> . PERC_LBRACE plaintext RBRACE
    (15) empty -> .

    COLON           shift and go to state 20
    PLAINTEXT       shift and go to state 3
    PERC_LBRACE     shift and go to state 8
    RBRACE          reduce using rule 15 (empty -> .)

    empty                          shift and go to state 19
    inner_tag_cont                 shift and go to state 18
    plaintext                      shift and go to state 21
    pholder_tag                    shift and go to state 22

state 13

    (9) inner_tag_name -> pholder_tag . inner_tag_cont
    (10) inner_tag_cont -> . plaintext inner_tag_cont
    (11) inner_tag_cont -> . pholder_tag inner_tag_cont
    (12) inner_tag_cont -> . empty
    (13) plaintext -> . PLAINTEXT plaintext
    (14) plaintext -> . PLAINTEXT
    (5) pholder_tag -> . PERC_LBRACE plaintext RBRACE
    (15) empty -> .

    PLAINTEXT       shift and go to state 3
    PERC_LBRACE     shift and go to state 8
    RBRACE          reduce using rule 15 (empty -> .)

    empty                          shift and go to state 19
    inner_tag_cont                 shift and go to state 23
    plaintext                      shift and go to state 21
    pholder_tag                    shift and go to state 22

state 14

    (1) expression -> plaintext expression .

    $end            reduce using rule 1 (expression -> plaintext expression .)


state 15

    (3) expression -> pholder_tag expression .

    $end            reduce using rule 3 (expression -> pholder_tag expression .)


state 16

    (5) pholder_tag -> PERC_LBRACE plaintext . RBRACE

    RBRACE          shift and go to state 24


state 17

    (6) inner_tag -> DOL_LBRACE inner_tag_name RBRACE .

    PLAINTEXT       reduce using rule 6 (inner_tag -> DOL_LBRACE inner_tag_name RBRACE .)
    DOL_LBRACE      reduce using rule 6 (inner_tag -> DOL_LBRACE inner_tag_name RBRACE .)
    PERC_LBRACE     reduce using rule 6 (inner_tag -> DOL_LBRACE inner_tag_name RBRACE .)
    $end            reduce using rule 6 (inner_tag -> DOL_LBRACE inner_tag_name RBRACE .)


state 18

    (8) inner_tag_name -> plaintext inner_tag_cont .

    RBRACE          reduce using rule 8 (inner_tag_name -> plaintext inner_tag_cont .)


state 19

    (12) inner_tag_cont -> empty .

    RBRACE          reduce using rule 12 (inner_tag_cont -> empty .)


state 20

    (7) inner_tag -> DOL_LBRACE plaintext COLON . inner_tag_name RBRACE
    (8) inner_tag_name -> . plaintext inner_tag_cont
    (9) inner_tag_name -> . pholder_tag inner_tag_cont
    (13) plaintext -> . PLAINTEXT plaintext
    (14) plaintext -> . PLAINTEXT
    (5) pholder_tag -> . PERC_LBRACE plaintext RBRACE

    PLAINTEXT       shift and go to state 3
    PERC_LBRACE     shift and go to state 8

    inner_tag_name                 shift and go to state 25
    plaintext                      shift and go to state 26
    pholder_tag                    shift and go to state 13

state 21

    (10) inner_tag_cont -> plaintext . inner_tag_cont
    (10) inner_tag_cont -> . plaintext inner_tag_cont
    (11) inner_tag_cont -> . pholder_tag inner_tag_cont
    (12) inner_tag_cont -> . empty
    (13) plaintext -> . PLAINTEXT plaintext
    (14) plaintext -> . PLAINTEXT
    (5) pholder_tag -> . PERC_LBRACE plaintext RBRACE
    (15) empty -> .

    PLAINTEXT       shift and go to state 3
    PERC_LBRACE     shift and go to state 8
    RBRACE          reduce using rule 15 (empty -> .)

    empty                          shift and go to state 19
    inner_tag_cont                 shift and go to state 27
    plaintext                      shift and go to state 21
    pholder_tag                    shift and go to state 22

state 22

    (11) inner_tag_cont -> pholder_tag . inner_tag_cont
    (10) inner_tag_cont -> . plaintext inner_tag_cont
    (11) inner_tag_cont -> . pholder_tag inner_tag_cont
    (12) inner_tag_cont -> . empty
    (13) plaintext -> . PLAINTEXT plaintext
    (14) plaintext -> . PLAINTEXT
    (5) pholder_tag -> . PERC_LBRACE plaintext RBRACE
    (15) empty -> .

    PLAINTEXT       shift and go to state 3
    PERC_LBRACE     shift and go to state 8
    RBRACE          reduce using rule 15 (empty -> .)

    empty                          shift and go to state 19
    inner_tag_cont                 shift and go to state 28
    plaintext                      shift and go to state 21
    pholder_tag                    shift and go to state 22

state 23

    (9) inner_tag_name -> pholder_tag inner_tag_cont .

    RBRACE          reduce using rule 9 (inner_tag_name -> pholder_tag inner_tag_cont .)


state 24

    (5) pholder_tag -> PERC_LBRACE plaintext RBRACE .

    PLAINTEXT       reduce using rule 5 (pholder_tag -> PERC_LBRACE plaintext RBRACE .)
    PERC_LBRACE     reduce using rule 5 (pholder_tag -> PERC_LBRACE plaintext RBRACE .)
    RBRACE          reduce using rule 5 (pholder_tag -> PERC_LBRACE plaintext RBRACE .)
    DOL_LBRACE      reduce using rule 5 (pholder_tag -> PERC_LBRACE plaintext RBRACE .)
    $end            reduce using rule 5 (pholder_tag -> PERC_LBRACE plaintext RBRACE .)


state 25

    (7) inner_tag -> DOL_LBRACE plaintext COLON inner_tag_name . RBRACE

    RBRACE          shift and go to state 29


state 26

    (8) inner_tag_name -> plaintext . inner_tag_cont
    (10) inner_tag_cont -> . plaintext inner_tag_cont
    (11) inner_tag_cont -> . pholder_tag inner_tag_cont
    (12) inner_tag_cont -> . empty
    (13) plaintext -> . PLAINTEXT plaintext
    (14) plaintext -> . PLAINTEXT
    (5) pholder_tag -> . PERC_LBRACE plaintext RBRACE
    (15) empty -> .

    PLAINTEXT       shift and go to state 3
    PERC_LBRACE     shift and go to state 8
    RBRACE          reduce using rule 15 (empty -> .)

    empty                          shift and go to state 19
    inner_tag_cont                 shift and go to state 18
    plaintext                      shift and go to state 21
    pholder_tag                    shift and go to state 22

state 27

    (10) inner_tag_cont -> plaintext inner_tag_cont .

    RBRACE          reduce using rule 10 (inner_tag_cont -> plaintext inner_tag_cont .)


state 28

    (11) inner_tag_cont -> pholder_tag inner_tag_cont .

    RBRACE          reduce using rule 11 (inner_tag_cont -> pholder_tag inner_tag_cont .)


state 29

    (7) inner_tag -> DOL_LBRACE plaintext COLON inner_tag_name RBRACE .

    PLAINTEXT       reduce using rule 7 (inner_tag -> DOL_LBRACE plaintext COLON inner_tag_name RBRACE .)
    DOL_LBRACE      reduce using rule 7 (inner_tag -> DOL_LBRACE plaintext COLON inner_tag_name RBRACE .)
    PERC_LBRACE     reduce using rule 7 (inner_tag -> DOL_LBRACE plaintext COLON inner_tag_name RBRACE .)
    $end            reduce using rule 7 (inner_tag -> DOL_LBRACE plaintext COLON inner_tag_name RBRACE .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for PLAINTEXT in state 3 resolved as shift
